Projet_GL/src/test/deca/codegen/invalid/division_zero.deca
// Test division zéro

{
  int notzero = 1;
  int zero = 0;
  int res = notzero/zero;
}
